--- a/mycoreutils/keco/Cargo.toml
+++ b/mycoreutils/keco/Cargo.toml
@@ -17,6 +17,8 @@ keywords = [
     "color",
     "echo"
 ]
+categories = ["command-line-interface"]
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
